--- a/Styles/global.css
+++ b/Styles/global.css
@@ -15,8 +15,8 @@
     --font-family: "Poppins", serif;
     text: 16px/150% var(--font-family);
     --text-lg: bold 32px/125% var(--font-family);
-    --text-md: 14px/170% var(--font-family); ;
-    --text-sm: 12px/170% var(--font-family);; 
+    --text-md: 14px/170% var(--font-family);
+    --text-sm: 12px/170% var(--font-family); 
   }
   body {
     color: var(--text-color-secondary);
