--- a/Styles/header.css
+++ b/Styles/header.css
@@ -4,38 +4,39 @@ header {
 header .container {
   display: flex;
   justify-content: space-between;
-
+  align-items: center;
 }
-
-
 #profile {
-  display: flex;
   gap: 32px;
-  
+  display: flex;
+  gap: ;
 }
 #profile > div {
   max-width: 384px;
 }
-#profile h1 {
+
+#profile h1{
   font: var(--text-lg);
   color: var(--text-color-primary);
   margin-bottom: 8px;
-
+  
 }
 #profile p {
   font: var(--text-md);
-
 }
 #info {
   list-style: none;
   display: flex;
   flex-direction: column;
-  gap: 16px ;
-  width: 280px ;
-
+  gap: 16px;
+  
+  width: 280px;
 }
-#info li {
+li {
   display: flex;
   align-items: center;
   gap: 8px;
+  
 }
+
+
