--- a/Styles/header.css
+++ b/Styles/header.css
@@ -1,28 +1,31 @@
 header {
   padding-block: 32px;
+  
 }
 header .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  
+
 }
 #profile {
   gap: 32px;
   display: flex;
-  gap: ;
+  gap: 32px ;
 }
-#profile > div {
-  max-width: 384px;
-}
+
 
 #profile h1{
   font: var(--text-lg);
   color: var(--text-color-primary);
   margin-bottom: 8px;
   
+  
 }
 #profile p {
   font: var(--text-md);
+  max-width: 384px;
 }
 #info {
   list-style: none;
@@ -30,7 +33,9 @@ header .container {
   flex-direction: column;
   gap: 16px;
   
-  width: 280px;
+  max-width: 280px;
+  
+  
 }
 li {
   display: flex;
