--- a/Styles/nav.css
+++ b/Styles/nav.css
@@ -3,8 +3,9 @@ nav {
   justify-content: space-between;
   align-items: center;
   
-  line-height: 0;
+  line-height: 0px;
   padding-block: 20px ;
+  
 }
 nav ul{
 display: flex;
@@ -12,7 +13,8 @@ list-style: none;
 align-items: center;
 gap: 24px ;
 
-padding-block: 8px;
+/* padding-block: 8px; */
+
 }
  #primary-menu li:last-child img {
   width: 40px ;
