--- a/Styles/nav.css
+++ b/Styles/nav.css
@@ -7,16 +7,17 @@ nav {
   padding-block: 20px ;
   
 }
-nav ul{
-display: flex;
-list-style: none;
-align-items: center;
-gap: 24px ;
+  nav ul{
+  display: flex;
+  list-style: none;
+  align-items: center;
+  gap: 20px ;
 
-/* padding-block: 8px; */
+  padding-block: 8px;
+
 
 }
- #primary-menu li:last-child img {
+nav ul li:last-child img {
   width: 40px ;
   height: 40px ;
   object-fit: cover;
